horizontal overflow fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,7 +40,7 @@ body {
 .container {
   max-width: $container-max-width;
   display: flex;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   margin: 0 auto;
   // overflow: hidden;
